Add people count

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,6 +43,9 @@ body {
 	#result {
 		margin-left: 200px;
 	}
+	#people-count {
+		font-weight: bold;
+	}
 	.person {
 		border: 1px solid #777;
 		list-style-type: none;
