auto zoom depending on the number of nodes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,22 @@ body, html {
 	display: block;
 }
 
+.anchorNode {
+	fill: none;
+	fill-opacity: 1;
+	stroke: #FFF;
+	stroke-width: 0.5px;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+	stroke-opacity: 1;
+	stroke-alignment: outer;
+	z-index: 10;
+	font-size: 10pt;
+	font-weight: bold;
+	pointer-events: none;
+	font-family: BentonSans, helvetica, sans;
+}
+
 .erdos {
 	#erdos-form {
 		margin-bottom: 40px;
