--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,7 @@ body, html {
 
 .o-header__primary__right {
 	text-align: right;
+	width: 150px;
 }
 
 .errormsg {
@@ -91,6 +92,12 @@ body, html {
 			clear: both;
 			margin: 25px 0;
 			position: relative;
+			.themes {
+				text-transform: uppercase;
+				font-weight: bold;
+				font-size: 12px;
+				line-height: 14px;
+			}
 			img {
 				position: absolute;
 				top: 0;
