--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -230,9 +230,12 @@ body, html {
 
 		li {
 			padding: 0.5em 0;
-			margin-top: 0.5em;
 			border: solid grey;
-			border-width: 1px 0;
+			border-width: 0 0 1px 0;
+
+			&:first-child {
+				border-width: 1px 0;
+			}
 		}
 	}
 
