--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -231,16 +231,38 @@ body, html {
 			margin: 0;
 			padding: 0;
 			margin-top: 0.5em;
+			perspective: 200;
 		}
 
 		li {
-			padding: 0.5em;
-			margin-bottom: 3px;
-			background-color: #FFDDB9;
-			color: black;
-			text-transform: uppercase;
-			font-size: 15px;
+			padding: 0;
+			margin: 0;
+			overflow: hidden;
+			transition: all 1s ease;
+			height: 0;
+			div {
+				transition: all 1s ease;
+				padding: 0.5em;
+				background-color: #FFDDB9;
+				color: black;
+				text-transform: uppercase;
+				font-size: 15px;
+				transform-origin: 50% 0 0;
+				transform: rotateX(-80deg);
+				opacity: 0.5;
+			}
 		}
+		li.visible {
+			transition: all 1s ease;
+			height: 32px;
+			margin: 0 0 3px 0;
+			div {
+				opacity: 1;
+				transition: all 1s ease;
+				transform: rotateX(0deg);
+			}
+		}
+
 	}
 
 	.content {
